# depot

./: Cargo.toml
db_service/: Cargo.toml
db_service/src/: cash.rs  db_helper.rs  lib.rs  model.rs  stock.rs  user.rs
rest/: cash.http  login.http  shares.http  stock.http
sql/: test.srqlnb
src/: cash.rs  ctx.rs  error.rs  main.rs  model.rs  stock.rs  user.rs
src/db/: test.srqlnb  user.srqlnb  user_setup.srqlnb
src/model/: user.srqlnb
src/web/: middleware.rs  mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
