[package]
name = "depot"
version = "0.1.0"
edition = "2021"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
surrealdb = { version = "1", features = ["kv-mem"] }
tokio = { version = "1.37.0", features = ["macros"] }
chrono = "0.4"
