[package]
name = "depot"
version = "0.1.0"
edition = "2021"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
thiserror = "1"
tracing = "0.1"# for our async runtime
tracing-subscriber = "0.3"

axum = "0.7"

[lib]
name = "db_service"
path = "db_service/src/lib.rs"