[package]
name = "depot"
version = "0.1.0"
edition = "2021"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"# for our async runtime
tracing-subscriber = { version = "0.3", features = ["json"] }
surrealdb = { version = "2.0", features = ["kv-mem"] }
axum = { version = "0.7" }
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.10"
strum_macros = "0.25"
lazy-regex = "3"
chrono = "0.4"
jsonwebtoken ="9"

[lib]
name = "db_service"
path = "db_service/src/lib.rs"
